--- a/example.html
+++ b/example.html
@@ -9,7 +9,7 @@
 
 
 <script src="js/jquery.min.js"></script>
-<script src="js/pinBoard.js"></script>
+<script src="js/pinBoard.min.js"></script>
 
 <script>
 	pinBoard('.pinBoard');
