--- a/example.html
+++ b/example.html
@@ -9,10 +9,10 @@
 
 
 <script src="js/jquery.min.js"></script>
-<script src="js/pinBoard.min.js"></script>
+<script src="js/pinBoard.js"></script>
 
 <script>
-	pinBoard('.pinBoard');
+	pinBoard();
 </script>
 
 </body>
